# mcp-containerd

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: api.proto
rig-integration/: Cargo.toml  config.toml
rig-integration/src/: main.rs  mcp_adaptor.rs
rig-integration/src/config/: mcp.rs
simple-chat-client/: Cargo.toml
simple-chat-client/src/: chat.rs  client.rs  config.rs  config.toml  error.rs  model.rs  tool.rs
src/: main.rs
src/cri/: config.rs  container.rs  image.rs  mod.rs  pod.rs  runtime.rs
src/ctr/: cmd.rs  mod.rs
src/service/: containerd.rs  ctr.rs  mod.rs
