[package]
name = "mcp-containerd"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
 "simple-chat-client"]

[dependencies]
rmcp = { git = "https://github.com/4t145/rmcp", features = ["server","transport-io"] }
tokio = { version = "1", features = ["full", "net"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
