[package]
name = "mcp-containerd"
version = "0.1.0"
edition = "2021"


[features]
default = []
ctr = []

[dependencies]
rmcp = { version = "0.2.0" ,features = ["server","transport-io","transport-sse-server","server","transport-streamable-http-server"] }
tokio = { version = "1", features = ["full", "net"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
schemars = "0.8"
axum = { version = "0.8", features = ["macros"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
